[package]
name = "rzr"
description = "[WIP]"
version = "0.0.0"
edition = "2021"
authors = ["Folke B <folke@gmail.com>"]
repository = "https://github.com/cloneable/rzr"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
exclude = [".gitignore", ".github", "target"]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
